refactor: LottoNumber, Lotto 객체생성 및 원시값 사용한 부분 수정